# scouts-kampvisum-backend

./: .env.dev  .env.dev.local  .env.development  .env.example  .env_development  .gitignore  Jenkinsfile  README.md  pyproject.toml  readme.md  requirements.txt  results.prospector  test.json
docker/: Dockerfile  entrypoint.sh
insomnia/: Insomnia-All_2021-08-20.json  Insomnia_2021-08-16.json  kampvisum.insomnia.json
scouts_kampvisum_api/: manage.py  scouts-kampvisum  settings.py  wsgi.py
scouts_kampvisum_api/apps/auth/: inuits_scouts_user_service.py
scouts_kampvisum_api/apps/base/: __init__.py  apps.py  exceptions.py  models.py  signals.py
scouts_kampvisum_api/apps/camps/: __init__.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py  views_api.py  viewsets.py
scouts_kampvisum_api/apps/deadlines/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/apps/groupadmin/: api.py  apps.py  serializers.py  services.py  urls.py  views.py
scouts_kampvisum_api/apps/groups/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/apps/locations/: __init__.py  apps.py  urls.py
scouts_kampvisum_api/apps/participants/: __init__.py  apps.py  pagination.py  urls.py
scouts_kampvisum_api/apps/people/: __init__.py  apps.py  filters.py  urls.py
scouts_kampvisum_api/apps/scout_camps/: apps.py  filters.py  serializers.py  services.py
scouts_kampvisum_api/apps/scout_groups/: apps.py
scouts_kampvisum_api/apps/scouts_camp_checks/: apps.py  models.py
scouts_kampvisum_api/apps/scouts_camp_visums/: apps.py  models.py  urls.py
scouts_kampvisum_api/apps/scouts_camps/: __init__.py  apps.py  filters.py  models.py  serializers.py  serializers_api.py  services.py  urls.py  views.py  views_api.py  viewsets.py
scouts_kampvisum_api/apps/scouts_groups/: __init__.py  apps.py  models.py  services.py  urls.py
scouts_kampvisum_api/apps/setup/: __init__.py  apps.py  models.py  urls.py  views.py
scouts_kampvisum_api/apps/signals/: __init__.py  apps.py  signal_handler.py
scouts_kampvisum_api/apps/utils/: apps.py
scouts_kampvisum_api/apps/visums/: __init__.py  apps.py  settings.py  urls.py
scouts_kampvisum_api/initial_data/: roles.yaml
scouts_kampvisum_api/inuits/: __init__.py  apps.py  mixins.py  models.py  serializers.py  tools.py
scouts_kampvisum_api/inuits/serializers/: __init__.py  fields.py
scouts_kampvisum_api/resources/mail/: camp_changed_after_deadline.html  camp_registered.html  camp_registered_after_deadline.html  camp_registered_before_deadline.html  responsible_changed.html  responsible_changed_after_deadline.html  scouts_mail_template_end.html  scouts_mail_template_start.html
scouts_kampvisum_api/scouts_auth/: README.md  __init__.py  apps.py  manage.py  pagination.py  settings.py  urls.py
scouts_kampvisum_api/scouts_auth/auth/: middleware.py  oidc.py  oidc_auth.py  oidc_user_helper.py  settings.py  urls.py  user.py  utils.py
scouts_kampvisum_api/scouts_auth/groupadmin/: apps.py  settings.py  urls.py  utils.py
scouts_kampvisum_api/scouts_auth/inuits/: apps.py  urls.py
scouts_kampvisum_api/scouts_auth/migrations/: 0001_initial.py  0002_alter_persistedfile_options_and_more.py  0002_alter_scoutsgroup_options.py  0002_alter_scoutsusersession_username.py  0002_auto_20221215_0533.py  0002_auto_20221220_1842.py  0002_scoutsusersession.py  0003_alter_scoutsusersession_data.py  0003_auto_20220328_1327.py  0003_persistedfile_directory_path.py  0003_rename_user_scoutsfunction__user.py  0003_scoutsgroup_parent_group.py  0004_auto_20221215_0946.py  (+9 more)
scouts_kampvisum_api/scouts_kampvisum_api/: admin.py  asgi.py  db_helper.py  pagination.py  settings.py  urls.py  wsgi.py
scripts/: clean_project.sh  install_scouts_auth.sh  install_scouts_auth_with_pip.sh  migrations.sh  pip_install_scouts_auth.sh  poetry_install.sh  run_django.sh
scripts/ssh/: id_rsa  id_rsa.pub
(+872 files in other folders)
