[build-system]
requires = ["poetry-core=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py39']


[tool.poetry]
name = "scouts-kampvisum-api"
version = "1.0"
description = "Provides functionality for setting up a scouts kamp visum"
authors = ["inuits <info@inuits.eu>"]
license = "GPL v2.0"

[tool.poetry.dependencies]
python = "^3.9.2"
boto3 = "1.26.52"
cffi = "1.15.1"
Django = "4.1.5"
django-anymail = {extras = ["sendinblue"], version = "9.0"}
django-cprofile-middleware = "1.0.5"
django-cors-headers = "3.13.0"
django-filter = "22.1"
django-safedelete = "1.3.1"
django-rest-enumfield = "0.2.0"
django-sql-middleware = "0.0.7"
django-storages = "1.13.2"
# Django-rest 3.14 breaks swagger, see: https://github.com/axnsan12/drf-yasg/issues/810
#djangorestframework = "3.14.0"
djangorestframework = "3.13.1"
drf-yasg2 = "1.19.4"
environs = "9.5.0"
future = "0.18.3"
mozilla-django-oidc = "3.0.0"
pdfrw = "0.4"
psycopg2-binary = "2.9.5"
pyjwt = "2.6.0"
PyYAML = "6.0"


[tool.poetry.group.dev.dependencies]
black = ">=23.10.0"
ipython = ">=8.16.1"
mypy = ">=1.6.1"
pylint = ">=3.0.2"
pytest = ">=3.4"
ruff = ">=0.1.1"


[tool.pytest.ini_options]
cache_dir = "var/cache/pytest"
log_cli = false  # enable to show log-output
log_cli_level = "NOTSET"
filterwarnings = [
    # "error",
    # "ignore::DeprecationWarning",
    # "ignore::ResourceWarning",
    # "ignore::Warning",
]
# markers = []
testpaths = ["tests"]
pythonpath = ["src"]

# the junit-report is used to report coverage in gitlab
addopts = "--color=yes --junit-xml='var/cache/coverage/pytest.xml'"


[tool.ruff]
# https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml
cache-dir = "var/cache/ruff"  # relative to project_root
ignore-init-module-imports = true
ignore = [
    # "F841",
    # "F401",  # imported but unused - todo: clean later
    ]
line-length = 120
